--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,5 +1,11 @@
 server.port=8088
 spring.profiles.active=local
 
+ac.jwt.id=dummy-jwt-id
+ac.jwt.subject=dummy-jwt-subject
+ac.jwt.issuer=dummy-jwt-issuer
+ac.jwt.secret.key=dummy-jwt-secret-key
+ac.jwt.expiration.ttl.mins=10
+
 microservice.default.url=http://localhost:4200
 microservice.one.url=http://localhost:8081
