--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -6,6 +6,8 @@ ac.jwt.subject=dummy-jwt-subject
 ac.jwt.issuer=dummy-jwt-issuer
 ac.jwt.secret.key=dummy-jwt-secret-key
 ac.jwt.expiration.ttl.mins=10
+roles-permissions-service-url=http://localhost:8080
 
 microservice.default.url=http://localhost:4200
 microservice.one.url=http://localhost:8081
+microservice.two.url=http://localhost:8082
